<resources>
    <string name="app_name">Planit</string>
    <string name="Description">Description</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Temporary">Temporary</string>
    <string name="Permanent">Permanent</string>
    <string name="Event">Event</string>
    <string name="Activity">Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_office_business">Profession</string>
    <string name="Leisure">Leisure</string>
    <string name="study_training_academia">Education</string>
    <string name="social">Social</string>
    <string name="breaks">Breaks</string>
    <string name="Priority">Priority</string>
    <string name="Low">Low</string>
    <string name="Medium">Medium</string>
    <string name="High">High</string>
    <string name="Top">Top</string>
    <string name="repeat">Repeat</string>
    <string name="Title">Title</string>
    <string name="Website">Website</string>
    <string name="Address">Address</string>
    <string name="Corporate">Corporate</string>
    <string name="Private">Private</string>
    <string name="Party">Party</string>
    <string name="Celebration">Celebration</string>
    <string name="Other">Other</string>
    <string name="Hyphon">-</string>
    <string name="channel_name">OrganiseChannel</string>
    <string name="channel_description">The Description for the app</string>
    <string name="dismiss">Dismiss</string>
    <string name="Start">Start</string>
    <string name="End">End</string>
    <string name="duplicate_to">Duplicate To</string>
    <string name="move_to">Move To</string>
    <string name="skip">Skip</string>
    <string name="Duplicate">Duplicate</string>
    <string name="Move">Move</string>
</resources>
