<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="200dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="7">

                <Button
                    android:id="@+id/button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button3"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button4"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button5"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button6"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button7"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="7">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/Monday"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <TextView
                    android:text="@string/Tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:text="@string/Wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:text="@string/Thursday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:text="@string/Friday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:text="@string/Saturday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"/>
                <TextView
                    android:text="@string/Sunday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="7">

                <CheckBox
                    android:id="@+id/MondayCB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:button="@drawable/default_checkbox"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleX="1.25"
                    android:scaleY="1.25" />

                <CheckBox
                    android:id="@+id/TuesdayCB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:button="@drawable/default_checkbox"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleX="1.25"
                    android:scaleY="1.25" />

                <CheckBox
                    android:id="@+id/WednesdayCB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:button="@drawable/default_checkbox"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleX="1.25"
                    android:scaleY="1.25" />

                <CheckBox
                    android:id="@+id/ThursdayCB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:button="@drawable/default_checkbox"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleX="1.25"
                    android:scaleY="1.25" />

                <CheckBox
                    android:id="@+id/FridayCB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:button="@drawable/default_checkbox"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleX="1.25"
                    android:scaleY="1.25" />

                <CheckBox
                    android:id="@+id/SaturdayCB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:button="@drawable/default_checkbox"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleX="1.25"
                    android:scaleY="1.25" />

                <CheckBox
                    android:id="@+id/SundayCB"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center|end"
                    android:layout_weight="1"
                    android:button="@drawable/default_checkbox"
                    android:clickable="true"
                    android:focusable="true"
                    android:scaleX="1.25"
                    android:scaleY="1.25" />
            </LinearLayout>
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>