<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:weightSum="2"
    android:orientation="vertical">
    <!-- Linear layout that contains all three priority buttons (high, medium, low)
    in a single line -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/workTextView"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/work_office_business" />

        <TextView
            android:id="@+id/socialTextView"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/social" />

        <TextView
            android:id="@+id/learningTextView"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/study_training_academia" />

        <TextView
            android:id="@+id/leisureTextView"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/Leisure" />

        <TextView
            android:id="@+id/breakTextView"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/breaks" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="4">


            <Button
                android:id="@+id/buttonP1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonP2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonP3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonP4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/eWorkCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@drawable/unchecked_work"
                android:gravity="center"
                android:scaleX="1"
                android:scaleY="1" />

            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/eSocialCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@drawable/unchecked_social"
                android:gravity="center"
                android:scaleX="1"
                android:scaleY="1" />

            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/eLearningCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@drawable/unchecked_learning"
                android:gravity="center"
                android:scaleX="1"
                android:scaleY="1" />

            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/eLeisureCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@drawable/unchecked_leisure"
                android:gravity="center"
                android:scaleX="1"
                android:scaleY="1" />

            <View
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/eBreaksCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:button="@drawable/unchecked_breaks"
                android:gravity="center"
                android:scaleX="1"
                android:scaleY="1" />


        </RadioGroup>
    </FrameLayout>


</LinearLayout>

