<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/WhiteColor"
    app:cardCornerRadius="7dp"
    app:cardUseCompatPadding="true"
    app:elevation="1dp">

    <LinearLayout

        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/state"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="State"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toStartOf="@+id/optionBar"
                app:layout_constraintHorizontal_bias="0.975"
                app:layout_constraintStart_toStartOf="@+id/TitleTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="35dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="0dp"
                android:text="@string/title"
                android:textColor="@color/BlackColor"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@+id/optionBar"
                app:layout_constraintStart_toEndOf="@+id/view_left"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/TimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"

                android:layout_marginTop="44dp"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/darkGrayColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/optionBar"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/TitleTextView"
                app:layout_constraintTop_toTopOf="@+id/TitleTextView" />

            <TextView
                android:id="@+id/priorityTextView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded"
                android:gravity="center"
                android:radius="5dp"
                android:text="@string/Priority"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/state"
                app:layout_constraintEnd_toStartOf="@+id/state"
                app:layout_constraintTop_toTopOf="@+id/state"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view_leftNxt"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@+id/view_left"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_left"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/optionBar"
                android:layout_width="50dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/EditButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_edit_black_24dp" />

                    <ImageButton
                        android:id="@+id/ShareButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_share_black_24dp" />

                    <ImageButton
                        android:id="@+id/MoreButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/ic_more_horiz_black_24dp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandable_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/DescriptionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/view_left_bottom"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"
                android:text="@string/Description"
                android:textColor="@color/BlackColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_left_bottom"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/DescriptionTextView"
                app:layout_constraintEnd_toStartOf="@+id/DescriptionTextView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/DescriptionTextView" />

            <View
                android:id="@+id/view_left_bottomNext"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/DescriptionTextView"
                app:layout_constraintStart_toEndOf="@+id/view_left_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/DescriptionTextView" />



        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/expandable_address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AddressTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_left_bottomNext2"
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
